--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bdapis",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "rest api service",
   "main": "app.js",
   "scripts": {
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/AbmSourav/bdapis#readme",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@abmsourav/localdb": "^1.3.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prisma": "^5.14.0"
   }
 }
