--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,10 @@
+# Database Configuration
+DATABASE_URL="file:./dev.db"
+
+# APP_PORT=3050
+NODE_ENV=development
+
+# Legacy MongoDB settings (if still needed)
 DBURL=<Please contact to maintainer>
 COLLECTION_V1_0=bdapi_v1.0
 COLLECTION_V1_1=bdapi_v1.1
